<!--:::::::::::::::::::::::::::::::::::::::::::::::::
  : Copyright 2018 Andre Silva. All rights reserved.:
  :                                                 :
  : Contact: mateussa@uni.coventry.ac.uk            :
  :                                                 :
  : Check my work at,                               :
  : https://github.coventry.ac.uk/mateussa          :
  : https://andrefmsilva.coventry.domains           :
  :                                                 :
  : strings.xml                                     :
  : Last modified 10 Nov 2018                       :
  :::::::::::::::::::::::::::::::::::::::::::::::::-->

<resources>
    <string name="app_name" translatable="false">Coventry University</string>

    <string name="twitter_key" translatable="false">wKryyRLBbfLsZg3a1NrPUiP2f</string>
    <string name="twitter_secret" translatable="false">GmzxZSbQ9oMOnIsDs8l6AfVfL5BzXEqCeYPIzhqqOZ72tpBwqV</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_news">News</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_timetable">Timetable</string>
    <string name="nav_library">Library</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="nav_header_user_photo">User Photo</string>

    <string name="news_tab_moodle">Moodle</string>
    <string name="news_tab_twitter">Twitter</string>
    <string name="news_tab_faculty">Faculty</string>
    <string name="nav_user_name_placeholder">User</string>
    <string name="nav_user_email_placeholder">Email</string>

    <string name="dashboard_tab_login">Login</string>
    <string name="dashboard_tab_enrol">Enrol</string>
    <string name="dashboard_username">Username</string>
    <string name="dashboard_password">Password</string>
    <string name="enrolement">Enrolement</string>
    <string name="dashboard_login_successful">Login Successful</string>
    <string name="dashboard_incorrect_user_pass">Username or password are incorrect</string>
    <string name="dashboard_incorrect_id_date">StudentID or date of birth are incorrect</string>
    <string name="dashboard_passwords_no_match">Passwords don\'t match, or empty</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="infodialog_retry">Retry</string>
    <string name="infodialog_ok">OK</string>

    <string name="settings">Settings</string>

    <string name="news_image">News Image</string>

    <string name="info_check_enrolment">Check Enrolment Status</string>
    <string name="info_reset_enrolment">Reset Enrolment</string>
    <string name="info_not_enroled_yet">Not enroled yet.</string>

    <string name="enrol_course">Course</string>
    <string name="enrol_it">IT Services</string>
    <string name="enrol_financial">Financial</string>
    <string name="enrol_emergencycontacts">Emergency Contacts</string>
    <string name="enrol_cardphoto">Card Photo</string>
    <string name="enrol_disability">Disability</string>
    <string name="enrol_address">Address</string>
    <string name="enrol_compulsory">Compulsory processes</string>
    <string name="enrol_course_registration">Course Programme Registration</string>
    <string name="enrol_it_registration">Register for IT Facilities</string>
    <string name="enrol_financial_registration">Financial Registration</string>
    <string name="enrol_emergency_registration">Emergency Contact Details</string>
    <string name="enrol_supplementary">Supplementary processes</string>
    <string name="enrol_id_photo">ID Card photo upload/collection</string>
    <string name="enrol_status_letter">Student Status Letters</string>
    <string name="enrol_status_letter_details">To request a Student Status Letters you first need to collect your card, after that you can print your own letter on your profile options.</string>
    <string name="enrol_register_vote">Register to vote</string>
    <string name="enrol_register_vote_details">If you are eligible to vote, you can use the buttons below.</string>
    <string name="enrol_information">Information</string>

    <string name="enrolit_password">Password</string>
    <string name="enrolit_password_confirm">Confirm Password</string>

    <string name="enrolfinancial_desc_slc">Only for undergraduates, fees paied by the students loan company, you will require you SLC reference number.</string>
    <string name="enrolfinancial_desc_ddebit">Pay the fees before University starts.</string>
    <string name="enrolfinancial_desc_recurrent">Pay the fees split into 8 instalments, with a recurrent bank account option.</string>
    <string name="enrolfinancial_desc_ddintalmnts">Pay the fees split into 8 instalments, by direct debit.</string>
    <string name="enrolfinancial_fees">Fees</string>
    <string name="enrolfinancial_instalments">Instalments</string>
    <string name="enrolfinancial_value">Value</string>
    <string name="enrolfinancial_total">Total</string>
    <string name="enrolfinancial_slc">Student Loan Company (SLC)</string>
    <string name="enrolfinancial_ddebit">Direct Debit</string>
    <string name="enrolfinancial_recurrent">Recurrent Instalments</string>
    <string name="enrolfinancial_ddinstalments">Direct Debit Instalments</string>

    <string name="enrolemergency_firstcontact">First Contact</string>
    <string name="enrolemergency_name">Name</string>
    <string name="enrolemergency_address">Address</string>
    <string name="enrolemergency_postcode">Post Code</string>
    <string name="enrolemergency_country">Country</string>
    <string name="enrolemergency_code">Code</string>
    <string name="enrolemergency_phonenumber">Phone Number</string>
    <string name="enrolemergency_email">Email</string>
    <string name="enrolemergency_secondcontact">Second Contact</string>

    <string name="enrolcardphoto_takepicture">Take new picture</string>

    <string name="enroldisability_handbook">To ensure relevant arrangements can be put in place for any assessment, please adhere to the deadlines detailed in your student handbook.</string>
    <string name="enroldisability_disability_1">Disability 1</string>
    <string name="enroldisability_disability_2">Disability 2</string>
    <string name="enroldisability_disability_3">Disability 3</string>
    <string name="enroldisability_disability_4">Disability 4</string>
    <string name="enroldisability_comment">Relevant comments about your disability</string>
    <string name="enroldisability_dsa">I am in receipt of Disabled Students\' Allowance (This is NOT the same as Disability Living Allowance (DLA)).</string>

    <string name="enrolcourse_registered_in">Registered in the following course.</string>
    <string name="enrolcourse_check_details">Please confirm the details above are correct, for the course you want to take this year.</string>

    <string name="enroladress_home">Home</string>
    <string name="enroladress_term">Term</string>
    <string name="enroladress_contact">Contact</string>
    <string name="enroladress_same_as">Same as</string>
    <string name="enroladress_home_address">Home Address</string>
    <string name="enroladress_term_address">Term Address</string>
    <string name="enroladress_flat">Flat</string>
    <string name="enroladress_house">House</string>
    <string name="enroladress_street">Street</string>
    <string name="enroladress_city">City</string>
    <string name="enroladress_region">Region</string>
    <string name="enroladress_post_code">Post Code</string>
    <string name="enroladress_country">Country</string>
    <string name="enroladress_phone">Phone</string>
    <string name="enroladress_mobile">Mobile</string>

    <string name="enrollogin_student_id">StudentID</string>
    <string name="enrollogin_birth_date">Date of Birth</string>
    <string name="enrollogin_enrol">Enrol</string>
    <string name="enrolit_loggedin">Logged In</string>
    <string name="enrolit_you_have_been_logged">You have been logged in within the app.</string>
</resources>
