<?xml version="1.0" encoding="utf-8"?><!--:::::::::::::::::::::::::::::::::::::::::::::::::
  : Copyright 2018 Andre Silva. All rights reserved.:
  :                                                 :
  : Contact: mateussa@uni.coventry.ac.uk            :
  :                                                 :
  : Check my work at,                               :
  : https://github.coventry.ac.uk/mateussa          :
  : https://andrefmsilva.coventry.domains           :
  :                                                 :
  : fragment_enroldisability    :
  : Last modified 10 Nov 2018                       :
  :::::::::::::::::::::::::::::::::::::::::::::::::-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@anim/layout_slide_bottom">

    <LinearLayout
        android:id="@+id/enroldisability_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enroldisability_handbook" />


        <TextView
            android:id="@+id/enroldisability_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enroldisability_disability_1"
            android:textColor="@color/co_primary_title"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/enroldisability_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />


        <TextView
            android:id="@+id/enroldisability_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/enroldisability_disability_2"
            android:textColor="@color/co_primary_title"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/enroldisability_spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />


        <TextView
            android:id="@+id/enroldisability_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/enroldisability_disability_3"
            android:textColor="@color/co_primary_title"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/enroldisability_spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />


        <TextView
            android:id="@+id/enroldisability_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/enroldisability_disability_4"
            android:textColor="@color/co_primary_title"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/enroldisability_spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/enroldisability_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/enroldisability_comment"
            android:gravity="top"
            android:hint="@string/enroldisability_comment"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="gravity"
            tools:ignore="UnusedAttribute" />

        <CheckBox
            android:id="@+id/enroldisability_dsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enroldisability_dsa"
            android:textSize="13sp" />

        <Button
            android:id="@+id/enroldisability_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/confirm" />

    </LinearLayout>
</ScrollView>
