<?xml version="1.0" encoding="utf-8"?><!--:::::::::::::::::::::::::::::::::::::::::::::::::
  : Copyright 2018 Andre Silva. All rights reserved.:
  :                                                 :
  : Contact: mateussa@uni.coventry.ac.uk            :
  :                                                 :
  : Check my work at,                               :
  : https://github.coventry.ac.uk/mateussa          :
  : https://andrefmsilva.coventry.domains           :
  :                                                 :
  : fragment_enrolfinancial     :
  : Last modified 10 Nov 2018                       :
  :::::::::::::::::::::::::::::::::::::::::::::::::-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@anim/layout_slide_bottom">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/enrolfinancial_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <domains.coventry.andrefmsilva.views.TitledTextView
            android:id="@+id/enrolfinancial_fees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:title="@string/enrolfinancial_fees" />

        <domains.coventry.andrefmsilva.views.TitledTextView
            android:id="@+id/enrolfinancial_instalments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:minWidth="50dp"
            app:layout_constraintBottom_toBottomOf="@id/enrolfinancial_fees"
            app:layout_constraintEnd_toStartOf="@id/enrolfinancial_value"
            app:layout_constraintStart_toEndOf="@id/enrolfinancial_fees"
            app:title="@string/enrolfinancial_instalments" />

        <domains.coventry.andrefmsilva.views.TitledTextView
            android:id="@+id/enrolfinancial_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:minWidth="50dp"
            app:layout_constraintBottom_toBottomOf="@id/enrolfinancial_instalments"
            app:layout_constraintEnd_toStartOf="@id/enrolfinancial_total"
            app:layout_constraintStart_toEndOf="@id/enrolfinancial_instalments"
            app:title="@string/enrolfinancial_value" />

        <domains.coventry.andrefmsilva.views.TitledTextView
            android:id="@+id/enrolfinancial_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minWidth="60dp"
            app:layout_constraintBottom_toBottomOf="@id/enrolfinancial_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="@string/enrolfinancial_total" />

        <View
            android:id="@+id/divider"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enrolfinancial_instalments"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="147dp" />

        <TextView
            android:id="@+id/enrolfinancial_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="6"
            app:layout_constraintBottom_toTopOf="@id/enrolfinancial_choices"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <RadioGroup
            android:id="@+id/enrolfinancial_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/enrolfinancial_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/enrolfinancial_slc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enrolfinancial_slc" />

            <RadioButton
                android:id="@+id/enrolfinancial_directdebit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enrolfinancial_ddebit" />

            <RadioButton
                android:id="@+id/enrolfinancial_recurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enrolfinancial_recurrent" />

            <RadioButton
                android:id="@+id/enrolfinancial_directinstalements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enrolfinancial_ddinstalments" />

        </RadioGroup>

        <Button
            android:id="@+id/enrolfinancial_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
