<?xml version="1.0" encoding="utf-8"?><!--:::::::::::::::::::::::::::::::::::::::::::::::::
  : Copyright 2018 Andre Silva. All rights reserved.:
  :                                                 :
  : Contact: mateussa@uni.coventry.ac.uk            :
  :                                                 :
  : Check my work at,                               :
  : https://github.coventry.ac.uk/mateussa          :
  : https://andrefmsilva.coventry.domains           :
  :                                                 :
  : fragment_enrollogin.xml     :
  : Last modified 10 Nov 2018                       :
  :::::::::::::::::::::::::::::::::::::::::::::::::-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@anim/layout_slide_bottom">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/enrollogin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="50dp">

        <EditText
            android:id="@+id/enrollogin_studentid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="@string/enrollogin_student_id"
            android:hint="@string/enrollogin_student_id"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/enrollogin_birthdate"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/enrollogin_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enrollogin_birth_date"
            android:hint="@string/enrollogin_birth_date"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/enrollogin_enrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:text="@string/enrollogin_enrol"
            app:layout_constraintTop_toBottomOf="@id/enrollogin_birthdate" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
